@@ -1578,7 +1578,8 @@ keybindings</a>. Pressing Escape will then focus the editor.</p>
 <h4><a class="toc-backref" href="#id60">Search bar</a></h4>
 <p>The quickest way to find some text is to use the search bar entry in
 the toolbar. This performs a case-insensitive search in the current
-document whilst you type. Pressing Enter will search again.</p>
+document whilst you type. Pressing Enter will search again, and pressing
+Shift-Enter will search backwards.</p>
 </div>
 </div>
 <div class="section" id="find">
@@ -6483,7 +6484,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-03-24 02:06 UTC.
+Generated on: 2011-03-24 16:40 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
